// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index/Payment/components/Modals/MagTek component should render correctly when ccMagesafeDeviceType is MagtekDaynamg 1`] = `
<MagTek
  data={
    Immutable.Map {
      isShowModal: true,
      totalFee: 111,
      error: "",
      cardTypeList: Object {
        "data": Array [],
      },
    }
  }
  fetchCardtypeAction={[Function]}
  generateWalletID={[Function]}
  hideMagtekModalAction={[Function]}
  initialData={
    Object {
      "ccMagesafeDeviceType": "MagtekDynamag",
    }
  }
  payment={[Function]}
  setCardInfo={[Function]}
  setServerError={[Function]}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "subscribe": [Function],
    }
  }
>
  <div
    className=""
  >
    <MagtekDynamag
      cardType="Credit Card"
      cardTypeList={Array []}
      generateWalletID={[Function]}
      hideModalAction={[Function]}
      payAccmount={111}
      payment={[Function]}
      renderWSIHelper={[Function]}
      serverError=""
      setCardInfo={[Function]}
      setServerError={[Function]}
      showModal={true}
    />
  </div>
</MagTek>
`;

exports[`index/Payment/components/Modals/MagTek component should render correctly when ccMagesafeDeviceType is not MagtekDaynamg 1`] = `
<MagTek
  data={
    Immutable.Map {
      isShowModal: false,
      totalFee: 111,
      error: "",
    }
  }
  fetchCardtypeAction={[Function]}
  generateWalletID={[Function]}
  hideMagtekModalAction={[Function]}
  initialData={
    Object {
      "ccMagesafeDeviceType": "MagtekIPAD",
    }
  }
  payment={[Function]}
  setCardInfo={[Function]}
  setServerError={[Function]}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "subscribe": [Function],
    }
  }
>
  <div
    className="u-hidden"
  >
    <MagtekIPAD
      cardType="Credit Card"
      cardTypeList={Array []}
      generateWalletID={[Function]}
      hideModalAction={[Function]}
      payAccmount={111}
      payment={[Function]}
      renderWSIHelper={[Function]}
      serverError=""
      setCardInfo={[Function]}
      setServerError={[Function]}
      showModal={false}
    />
  </div>
</MagTek>
`;
